# parquet_writer

./: CMakeLists.txt  conanfile.py  main  main.cpp  setup_conan.ps1  setup_conan.sh  test.parquet
